# nda_conference_registration

./: .gitignore  Makefile  dump.rdb  env.example  manage.py  pyproject.toml
conference_registration/: admin.py  email_sender.py  forms.py  models.py  tasks.py  urls.py  views.py
conference_registration/migrations/: 0001_initial.py  0002_alter_person_company_inn.py  0003_alter_person_person_phone.py  0004_person_company_name.py  0005_person_person_unique_key_and_more.py  0006_alter_person_person_unique_key.py  0007_alter_person_company_related_manager.py
nda/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: addperson.html  cancel.html  confirmation.html  deleteperson.html  index.html  login.html  message_for_customer.html  message_for_nda.html  not_allowed.html  partners_list.html
