[project]
name = "nda-conference-registration"
version = "0.1.0"
description = ""
authors = [
    {name = "mega_kenga",email = "marka.i09@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "dadata (>=24.10.0,<25.0.0)",
    "django-debug-toolbar (>=5.1.0,<6.0.0)",
    "django-redis (>=5.4.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false
